--- a/carddetails/carddetails.css
+++ b/carddetails/carddetails.css
@@ -11,3 +11,11 @@ a {
 a:hover {
     color: white;
 }
+
+.card-img-top {
+    display: block;
+    max-width:230px;
+    max-height:95px;
+    width: auto;
+    height: auto;
+  }
