--- a/cardlist/cardlist.css
+++ b/cardlist/cardlist.css
@@ -7,17 +7,14 @@
     margin-left: 20%;
     margin-right: 20%;
     margin-bottom: 3%; 
-
 }
 
 .card {
     margin-top: 2%;
 }
 
-body {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
+#main {
+    background-color: red;
 }
 pre {
     visibility: hidden;
