--- a/cardlist/cardlist.css
+++ b/cardlist/cardlist.css
@@ -1,4 +1,4 @@
-/* #cardlist {
+#cardlist {
     
     display: flex;
     justify-content: space-between;
@@ -22,4 +22,4 @@ pre {
 
 a {
     text-decoration: none;
-} */
+}
