--- a/addcustomer/addcustomer.css
+++ b/addcustomer/addcustomer.css
@@ -1,12 +1,3 @@
-a {
-    color: inherit;
-    text-decoration: none;
-}
-
-a:hover {
-    color: white;
-}
-
-body {
-    padding-top: 10%;
+#form {
+    padding-top: 2%;
 }
