--- a/redeem/redeem.css
+++ b/redeem/redeem.css
@@ -1,4 +1,4 @@
-#cart_main {
+#redeem_main {
    
     margin: 2%;
     
@@ -6,7 +6,7 @@
     
 } 
 
-#cart_card {
+#redeem_card {
     padding-top: 10px;
     
 }
